--- a/Ecoordenador1.1/nbproject/project.properties
+++ b/Ecoordenador1.1/nbproject/project.properties
@@ -30,32 +30,39 @@ excludes=
 file.reference.commons-fileupload-1.2.2.jar=lib/commons-fileupload-1.2.2.jar
 file.reference.commons-io-2.3.jar=lib/commons-io-2.3.jar
 file.reference.commons-logging-1.1.1.jar=lib/CommonsLogging/commons-logging-1.1.1.jar
+file.reference.facelets-taglib-jsf20-spring-3-0.5.jar=lib/facelets-taglib-jsf20-spring-3-0.5.jar
 file.reference.postgresql-9.1-901.jdbc3.jar=lib/postgresql-9.1-901.jdbc3.jar
 file.reference.primefaces-3.4.1.jar=lib/primefaces-3.4.1.jar
-file.reference.spring-aop-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-aop-3.0.6.RELEASE.jar
-file.reference.spring-asm-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-asm-3.0.6.RELEASE.jar
-file.reference.spring-beans-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-beans-3.0.6.RELEASE.jar
-file.reference.spring-context-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-context-3.0.6.RELEASE.jar
-file.reference.spring-context-support-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-context-support-3.0.6.RELEASE.jar
-file.reference.spring-core-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-core-3.0.6.RELEASE.jar
-file.reference.spring-expression-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-expression-3.0.6.RELEASE.jar
-file.reference.spring-jdbc-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-jdbc-3.0.6.RELEASE.jar
+file.reference.spring-aop-3.0.6.RELEASE.jar=lib/Spring/spring-aop-3.0.6.RELEASE.jar
+file.reference.spring-asm-3.0.6.RELEASE.jar=lib/Spring/spring-asm-3.0.6.RELEASE.jar
+file.reference.spring-beans-3.0.6.RELEASE.jar=lib/Spring/spring-beans-3.0.6.RELEASE.jar
+file.reference.spring-context-3.0.6.RELEASE.jar=lib/Spring/spring-context-3.0.6.RELEASE.jar
+file.reference.spring-context-support-3.0.6.RELEASE.jar=lib/Spring/spring-context-support-3.0.6.RELEASE.jar
+file.reference.spring-core-3.0.6.RELEASE.jar=lib/Spring/spring-core-3.0.6.RELEASE.jar
+file.reference.spring-expression-3.0.6.RELEASE.jar=lib/Spring/spring-expression-3.0.6.RELEASE.jar
+file.reference.spring-jdbc-3.0.6.RELEASE.jar=lib/Spring/spring-jdbc-3.0.6.RELEASE.jar
+file.reference.spring-security-acl-3.1.0.RELEASE.jar=lib/Spring/spring-security-acl-3.1.0.RELEASE.jar
 file.reference.spring-security-acl-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-acl-3.1.3.RELEASE.jar
 file.reference.spring-security-aspects-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-aspects-3.1.3.RELEASE.jar
 file.reference.spring-security-cas-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-cas-3.1.3.RELEASE.jar
+file.reference.spring-security-config-3.1.0.RELEASE.jar=lib/Spring/spring-security-config-3.1.0.RELEASE.jar
 file.reference.spring-security-config-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-config-3.1.3.RELEASE.jar
+file.reference.spring-security-core-3.1.0.RELEASE.jar=lib/Spring/spring-security-core-3.1.0.RELEASE.jar
 file.reference.spring-security-core-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-core-3.1.3.RELEASE.jar
+file.reference.spring-security-crypto-3.1.0.RELEASE.jar=lib/Spring/spring-security-crypto-3.1.0.RELEASE.jar
 file.reference.spring-security-crypto-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-crypto-3.1.3.RELEASE.jar
 file.reference.spring-security-ldap-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-ldap-3.1.3.RELEASE.jar
 file.reference.spring-security-openid-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-openid-3.1.3.RELEASE.jar
 file.reference.spring-security-remoting-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-remoting-3.1.3.RELEASE.jar
 file.reference.spring-security-samples-contacts-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-samples-contacts-3.1.3.RELEASE.jar
 file.reference.spring-security-samples-tutorial-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-samples-tutorial-3.1.3.RELEASE.jar
+file.reference.spring-security-taglibs-3.1.0.RELEASE.jar=lib/Spring/spring-security-taglibs-3.1.0.RELEASE.jar
 file.reference.spring-security-taglibs-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-taglibs-3.1.3.RELEASE.jar
+file.reference.spring-security-web-3.1.0.RELEASE.jar=lib/Spring/spring-security-web-3.1.0.RELEASE.jar
 file.reference.spring-security-web-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-web-3.1.3.RELEASE.jar
-file.reference.spring-tx-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-tx-3.0.6.RELEASE.jar
-file.reference.spring-web-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-web-3.0.6.RELEASE.jar
-file.reference.spring-webmvc-3.0.6.RELEASE.jar=lib/SpringSecurity/spring-webmvc-3.0.6.RELEASE.jar
+file.reference.spring-tx-3.0.6.RELEASE.jar=lib/Spring/spring-tx-3.0.6.RELEASE.jar
+file.reference.spring-web-3.0.6.RELEASE.jar=lib/Spring/spring-web-3.0.6.RELEASE.jar
+file.reference.spring-webmvc-3.0.6.RELEASE.jar=lib/Spring/spring-webmvc-3.0.6.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -76,14 +83,6 @@ javac.classpath=\
     ${file.reference.postgresql-9.1-901.jdbc3.jar}:\
     ${file.reference.primefaces-3.4.1.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.spring-aop-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-asm-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-beans-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-context-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-context-support-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-core-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-expression-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-jdbc-3.0.6.RELEASE.jar}:\
     ${file.reference.spring-security-acl-3.1.3.RELEASE.jar}:\
     ${file.reference.spring-security-aspects-3.1.3.RELEASE.jar}:\
     ${file.reference.spring-security-cas-3.1.3.RELEASE.jar}:\
@@ -97,9 +96,24 @@ javac.classpath=\
     ${file.reference.spring-security-samples-tutorial-3.1.3.RELEASE.jar}:\
     ${file.reference.spring-security-taglibs-3.1.3.RELEASE.jar}:\
     ${file.reference.spring-security-web-3.1.3.RELEASE.jar}:\
+    ${file.reference.spring-aop-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-asm-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-beans-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-context-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-context-support-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-core-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-expression-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-jdbc-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-security-acl-3.1.0.RELEASE.jar}:\
+    ${file.reference.spring-security-config-3.1.0.RELEASE.jar}:\
+    ${file.reference.spring-security-core-3.1.0.RELEASE.jar}:\
+    ${file.reference.spring-security-crypto-3.1.0.RELEASE.jar}:\
+    ${file.reference.spring-security-taglibs-3.1.0.RELEASE.jar}:\
+    ${file.reference.spring-security-web-3.1.0.RELEASE.jar}:\
     ${file.reference.spring-tx-3.0.6.RELEASE.jar}:\
     ${file.reference.spring-web-3.0.6.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-3.0.6.RELEASE.jar}
+    ${file.reference.spring-webmvc-3.0.6.RELEASE.jar}:\
+    ${file.reference.facelets-taglib-jsf20-spring-3-0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
