--- a/Ecoordenador1.1/nbproject/project.properties
+++ b/Ecoordenador1.1/nbproject/project.properties
@@ -30,15 +30,9 @@ excludes=
 file.reference.commons-fileupload-1.2.2.jar=lib/commons-fileupload-1.2.2.jar
 file.reference.commons-io-2.3.jar=lib/commons-io-2.3.jar
 file.reference.commons-logging-1.1.1.jar=lib/CommonsLogging/commons-logging-1.1.1.jar
-file.reference.dsn.jar=lib/JavaMail/dsn.jar
 file.reference.facelets-taglib-jsf20-spring-3-0.5.jar=lib/facelets-taglib-jsf20-spring-3-0.5.jar
-file.reference.imap.jar=lib/JavaMail/imap.jar
-file.reference.mail.jar=lib/JavaMail/mail.jar
-file.reference.mailapi.jar=lib/JavaMail/mailapi.jar
-file.reference.pop3.jar=lib/JavaMail/pop3.jar
 file.reference.postgresql-9.1-901.jdbc3.jar=lib/postgresql-9.1-901.jdbc3.jar
 file.reference.primefaces-3.4.1.jar=lib/primefaces-3.4.1.jar
-file.reference.smtp.jar=lib/JavaMail/smtp.jar
 file.reference.spring-aop-3.0.6.RELEASE.jar=lib/Spring/spring-aop-3.0.6.RELEASE.jar
 file.reference.spring-asm-3.0.6.RELEASE.jar=lib/Spring/spring-asm-3.0.6.RELEASE.jar
 file.reference.spring-beans-3.0.6.RELEASE.jar=lib/Spring/spring-beans-3.0.6.RELEASE.jar
@@ -74,7 +68,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
@@ -119,13 +113,7 @@ javac.classpath=\
     ${file.reference.spring-tx-3.0.6.RELEASE.jar}:\
     ${file.reference.spring-web-3.0.6.RELEASE.jar}:\
     ${file.reference.spring-webmvc-3.0.6.RELEASE.jar}:\
-    ${file.reference.facelets-taglib-jsf20-spring-3-0.5.jar}:\
-    ${file.reference.dsn.jar}:\
-    ${file.reference.imap.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mailapi.jar}:\
-    ${file.reference.pop3.jar}:\
-    ${file.reference.smtp.jar}
+    ${file.reference.facelets-taglib-jsf20-spring-3-0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
