--- a/trunk/Ecoordenador1.1/nbproject/project.properties
+++ b/trunk/Ecoordenador1.1/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.spring-context-support-3.0.6.RELEASE.jar=lib/Spring/spring-contex
 file.reference.spring-core-3.0.6.RELEASE.jar=lib/Spring/spring-core-3.0.6.RELEASE.jar
 file.reference.spring-expression-3.0.6.RELEASE.jar=lib/Spring/spring-expression-3.0.6.RELEASE.jar
 file.reference.spring-jdbc-3.0.6.RELEASE.jar=lib/Spring/spring-jdbc-3.0.6.RELEASE.jar
+file.reference.spring-orm-3.1.0.RELEASE.jar=lib\\Spring\\spring-orm-3.1.0.RELEASE.jar
 file.reference.spring-security-acl-3.1.0.RELEASE.jar=lib/Spring/spring-security-acl-3.1.0.RELEASE.jar
 file.reference.spring-security-acl-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-acl-3.1.3.RELEASE.jar
 file.reference.spring-security-aspects-3.1.3.RELEASE.jar=lib/SpringSecurity/spring-security-aspects-3.1.3.RELEASE.jar
@@ -69,7 +70,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
@@ -287,7 +288,8 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.mailapi.jar}:\
     ${file.reference.pop3.jar}:\
-    ${file.reference.smtp.jar}
+    ${file.reference.smtp.jar}:\
+    ${file.reference.spring-orm-3.1.0.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
