--- a/trunk/Ecoordenador1.1/nbproject/project.properties
+++ b/trunk/Ecoordenador1.1/nbproject/project.properties
@@ -28,10 +28,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-collections-3.2.1.jar=lib/IReport/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib/IReport/commons-digester-2.1.jar
 file.reference.commons-fileupload-1.2.2.jar=lib/commons-fileupload-1.2.2.jar
 file.reference.commons-io-2.3.jar=lib/commons-io-2.3.jar
 file.reference.commons-logging-1.1.1.jar=lib/CommonsLogging/commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.jar=lib/IReport/commons-logging-1.1.jar
 file.reference.facelets-taglib-jsf20-spring-3-0.5.jar=lib/facelets-taglib-jsf20-spring-3-0.5.jar
+file.reference.groovy-all-1.7.5.jar=lib/IReport/groovy-all-1.7.5.jar
+file.reference.iText-2.1.7.jar=lib/IReport/iText-2.1.7.jar
+file.reference.jasperreports-4.8.0.jar=lib/IReport/jasperreports-4.8.0.jar
+file.reference.joda-time-2.1.jar=lib/JodaTime/joda-time-2.1.jar
+file.reference.log4j-1.2.15.jar=lib/IReport/log4j-1.2.15.jar
 file.reference.postgresql-9.1-901.jdbc3.jar=lib/postgresql-9.1-901.jdbc3.jar
 file.reference.primefaces-3.4.1.jar=lib/primefaces-3.4.1.jar
 file.reference.spring-aop-3.0.6.RELEASE.jar=lib/Spring/spring-aop-3.0.6.RELEASE.jar
@@ -289,7 +297,15 @@ javac.classpath=\
     ${file.reference.mailapi.jar}:\
     ${file.reference.pop3.jar}:\
     ${file.reference.smtp.jar}:\
-    ${file.reference.spring-orm-3.1.0.RELEASE.jar}
+    ${file.reference.spring-orm-3.1.0.RELEASE.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-4.8.0.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.joda-time-2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
